ajax - create, prams are avalible

--- a/app/views/hh_forms/_new_contact.html.haml
+++ b/app/views/hh_forms/_new_contact.html.haml
@@ -46,10 +46,10 @@
 			= f.text_field :referral_source, :class => "form-control"
 			%br
 			= f.label :physician, "Physicians Name"
-			= text_field :hhform, :physician, :class => "form-control"
+			= f.text_field :physician, :class => "form-control"
 			%br
 			= f.label :physician_address, "Physician Address"
-			= text_field :hhform, :physician_address, :class => "form-control", :class => "form-control"				
+			= f.text_field :physician_address, :class => "form-control"
 			%br				
 			= f.label :date_of_birth, "Date of Birth"
 			%br
