saving, rendering preview, (skin_condition, loss of sensation, alergies) show when not checked

--- a/app/views/hh_forms/_new_checkboxes.html.haml
+++ b/app/views/hh_forms/_new_checkboxes.html.haml
@@ -26,9 +26,6 @@
 				= f.check_box :hepatitis
 				= f.label :hepatitis, "hepatitis"
 				%br
-				= f.check_box :infectious_skin_condition
-				= f.label :infectious_skin_condition, "infectious skin condition"
-				%br
 				= f.check_box :tb
 				= f.label :tb, "tb"
 				%br
@@ -36,11 +33,11 @@
 				= f.label :hiv, "hiv"
 			.testimonial	
 				%h4 Other Conditions
-				= f.check_box :loss_of_sensation
 				= f.label :loss_of_sensation, "loss of sensation"
+				= f.text_field :loss_of_sensation
 				%br
-				= f.check_box :diabetes
 				= f.label :diabetes, "diabetes"
+				= f.check_box :diabetes
 				%br
 				#diabetes_onset
 					= f.label :diabetes_onset, "Diabetes onset"
@@ -48,7 +45,7 @@
 					= f.date_select :diabetes_onset, :start_year => 1925, :html_options => {:class => "form-control"}					
 					%br
 					%br
-				= f.check_box :allergies
+				= f.text_field :allergies
 				= f.label :allergies, "allergies"
 				%br
 				= f.check_box :epilepsy
@@ -109,7 +106,10 @@
 				%br
 			.testimonial
 				%h4.nobottommargin Skin
-				= f.check_box :skin_condition
+				= f.check_box :infectious_skin_condition
+				= f.label :infectious_skin_condition, "infectious skin condition"
+				%br
+				= f.text_field :skin_condition
 				= f.label :skin_condition, "skin condition"					
 			.testimonial
 				%h4 Women
