--- a/app/views/hh_forms/_preview_or_show.json.haml
+++ b/app/views/hh_forms/_preview_or_show.json.haml
@@ -1,7 +1,7 @@
 .container
 	.row
 		.col_two_third.testimonial
-			%h3 Health History
+			%h4 Your Health History form was saved successfully, your massage therapist will be notified.
 	.row
 		.col_one_third
 			- if hh_form_fields(@hhform, :personal_info)
