confirmation preview scroll into view

--- a/app/views/hh_forms/_new_contact.html.haml
+++ b/app/views/hh_forms/_new_contact.html.haml
@@ -13,7 +13,7 @@
 	.row
 		.col_one_third.testimonial
 			= f.label :first_name, "First Name"
-			= f.text_field :first_name, :class => "form-control"
+			= f.text_field :first_name, :class => "form-control", :autofocus => true
 			%br
 			= f.label :last_name, "Last Name"
 			= f.text_field :last_name, :class => "form-control"
