--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,9 +3,30 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+  <!-- New Feilds -->
+
+  <div class="field">
+    <%= f.label "Clinic" %><br />
+    <%= f.text_field :clinic_name, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :First_Name %><br />
+    <%= f.text_field :first_name %>
+  </div>
+
+    <div class="field">
+    <%= f.label "Last Name" %><br />
+    <%= f.text_field :last_name %>
+  </div>
+
+  <!-- New Feilds -->
+
+
+
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
