bug fix in _preview_or_show.jason.haml = syntax error

--- a/app/views/hh_forms/_preview_or_show.json.haml
+++ b/app/views/hh_forms/_preview_or_show.json.haml
@@ -26,7 +26,7 @@
 							%strong= title.humanize
 							= data
 							%br	
-						- elsif
+						- else
 							%strong= title.humanize
 							%br
 			- if hh_form_fields(@hhform, :injuries_mental_other_special)
